:bug: fix horizontal scroll about

--- a/src/scss/layout/_years.scss
+++ b/src/scss/layout/_years.scss
@@ -52,7 +52,8 @@
     position: absolute;
     top: 0;
     bottom: 0;
-    width: 100%;
+    left: $gutter;
+    right: $gutter;
 }
 .year-landmark{
     position: fixed;
